--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -4,8 +4,8 @@
 	"license": "SEE LICENSE IN <your-license-filename>",
 	"repository": "<fill-your-repository-here>",
 	"dependencies": {
-		"@nativescript/ionic-portals": "file:../../packages/ionic-portals",
 		"@nativescript/core": "file:../../node_modules/@nativescript/core",
+		"@nativescript/fingerprint-auth": "file:../../packages/fingerprint-auth",
 		"@nativescript/animated-circle": "file:../../packages/animated-circle",
 		"@nativescript/appavailability": "file:../../packages/appavailability",
 		"@nativescript/apple-sign-in": "file:../../packages/apple-sign-in",
@@ -22,15 +22,15 @@
 		"@nativescript/directions": "file:../../packages/directions",
 		"@nativescript/email": "file:../../packages/email",
 		"@nativescript/facebook": "file:../../packages/facebook",
-		"@nativescript/fingerprint-auth": "file:../../packages/fingerprint-auth",
 		"@nativescript/geolocation": "file:../../packages/geolocation",
 		"@nativescript/google-maps": "file:../../packages/google-maps",
 		"@nativescript/google-signin": "file:../../packages/google-signin",
 		"@nativescript/imagepicker": "file:../../packages/imagepicker",
+		"@nativescript/ionic-portals": "file:../../packages/ionic-portals",
 		"@nativescript/ios-security": "file:../../packages/ios-security",
 		"@nativescript/iqkeyboardmanager": "file:../../packages/iqkeyboardmanager",
 		"@nativescript/local-notifications": "file:../../packages/local-notifications",
-		"@nativescript/localize": "file:../../dist/packages/localize",
+		"@nativescript/localize": "file:../../packages/localize",
 		"@nativescript/picker": "file:../../packages/picker",
 		"@nativescript/shared-notification-delegate": "file:../../packages/shared-notification-delegate",
 		"@nativescript/social-share": "file:../../packages/social-share",
