--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
 		"typescript": "~4.7.3",
 		"vue": "~2.6.12",
 		"zone.js": "~0.11.1",
-		"@angular-devkit/build-angular": "^14.0.0"
+		"@angular-devkit/build-angular": "^14.0.0",
+		"@fortawesome/fontawesome-free": "~6.2.0",
+		"scss-symbols-parser": "^2.0.1",
+		"string-replace-loader": "3.1.0",
+		"fontmin": "^0.9.9"
 	},
 	"lint-staged": {
 		"**/*.{js,ts,scss,json,html}": [
