--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"@fortawesome/fontawesome-free": "~6.2.0",
 		"scss-symbols-parser": "^2.0.1",
 		"string-replace-loader": "3.1.0",
-		"fontmin": "^0.9.9"
+		"fontmin": "^0.9.9",
+		"@mdi/font": "^7.0.96"
 	},
 	"lint-staged": {
 		"**/*.{js,ts,scss,json,html}": [
